# android-deno-runtime-example

./: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
mlkit-barcode-scanning/: build.gradle
mlkit-camera-core/: build.gradle
plaoc/: #bfsp.ts  #bfsw.ts  .npmignore  .npmrc  BFS-App-Metadata.json  BFS-App-Metadata.ts  copy.cjs  import_map.json  index.html  index.ts  package-lock.json  package.json  tsconfig.isolated.json  tsconfig.json  tsconfig.typings.json
plaoc/.bfsp/: #bfsp-04d6177d75940f21f8084ea19cb8310b.mjs  #bfsp-372af7638734eb0365f349b24da315d3.mjs  refs.d.ts
plaoc/.bfsw/: #bfsw-00a67172ee2741d45ab25dfeb2cc83cb.mjs  #bfsw-0f5002bd1557a53ad3322996e9a4c7b0.mjs  #bfsw-2c4debf334c86766ced25657705cd865.mjs  (+10 more)
plaoc/core/: #bfsp.ts  WebSockets.ts  (+4 more)
rust_lib/: .gitignore  Cargo.toml  Cross.toml  bfs-app.md  build.rs  cargo-1.24.toml  scripts.md
rust_lib/.cargo/: config.toml
rust_lib/assets/: hello_runtime.js
rust_lib/runtime/: Cargo.toml  build.rs  lib.rs  permissions.rs  web_worker.rs  worker.rs
rust_lib/runtime-1.24.0/: Cargo.toml  build.rs  web_worker.rs
rust_lib/runtime/js/: 90_deno_ns.js
rust_lib/src/: .main.rs.bak  androd_initer.rs  fmt_errors.rs  java_glue.rs.in  lib.rs  main.rs  module_loader.rs  my_deno_core.rs  my_deno_runtime.rs
rust_lib/src/.web_socket/: mod.rs
rust_lib/src/android/: androd_initer.rs  android_inter.rs  d_web_view.rs  deno.rs  mod.rs  scanner  scanner.rs
rust_lib/src/js_bridge/: call_android_function.rs  call_android_js.rs  call_js_function.rs  mod.rs
rust_lib/src/ops/: mod.rs
rust_lib/src/web_socket/: handler.rs  mod.rs  shm.rs  ws.rs
rust_lib/tsc/: tsc.js
(+213 files in other folders)
