[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rifgen = "0.1.51"
jni-sys = "0.3.0"
#logging
log = "0.4.16"
once_cell = "=1.10.0"
log-panics = "2.0.0"
android_logger = "0.11.0"
deno_core = "0.130.0"
tokio = "1.17.0"
# deno_runtime = "*"

[build-dependencies]
flapigen = "0.6.0-pre9"
deno_core = {version = "0.130.0"}
rifgen = "0.1.51"
zstd = "=0.9.2"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]
