[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rifgen = "0.1.51"
#logging
log = "0.4.16"
once_cell = "=1.10.0"
log-panics = "2.0.0"
android_logger = "0.11.0"
deno_runtime = { path = "./runtime", features = ["standalone"] }
deno_webidl = { path = "../../deno/ext/webidl", features = ["standalone"] }
deno_url = { path = "../../deno/ext/url", features = ["standalone"] }
deno_tls = { path = "../../deno/ext/tls", features = ["standalone"] }
deno_web = { path = "../../deno/ext/web", features = ["standalone"] }
deno_console = { path = "../../deno/ext/console", features = ["standalone"] }
deno_crypto = { path = "../../deno/ext/crypto", features = ["standalone"] }
deno_core = { path = "../../deno/core", features = ["standalone"] }
tokio = "1.17.0"
# assets_manager = "0.7.2"
# android-ndk = "0.0.6"
futures = "0.3.21"

[target.'cfg(target_os="android")'.dependencies] 
jni = "0.19.0"
jni-sys = "0.3.0"
ndk = "0.6.0"
ndk-context = "0.1.1"
ndk-sys = "0.3.0"

[build-dependencies]
flapigen = "0.6.0-pre9"
deno_core = { path = "../../deno/core" }
rifgen = "0.1.51"
zstd = "=0.9.2"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]
